force-app/main/default/objects/Project__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>It is used in Welcome Call Email for Contact Email</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>