force-app/main/default/objects/Project__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <inlineHelpText>It is used in Welcome Call Email for Contact Person</inlineHelpText>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>