force-app/main/default/objects/Project__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <inlineHelpText>It is used in Welcome Call Email for Contact Phone</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>