force-app/main/default/objects/Project__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <label>Property Address</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>