force-app/main/default/objects/Project__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Property</fullName>
                <default>true</default>
                <label>New Property</label>
            </value>
            <value>
                <fullName>Existing Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>