force-app/main/default/objects/Project__c/fields/Quotation_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>