force-app/main/default/objects/Project__c/fields/Quotation_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>