force-app/main/default/objects/Project__c/fields/TDS_Percentage__c.field-meta.xml
<CustomField>
    <fullName>TDS_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to calculate TDS amount if Agreement Value crosses the TDS threshold amount.</description>
    <label>TDS Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>