force-app/main/default/objects/Project__c/fields/TDS_Threshold__c.field-meta.xml
<CustomField>
    <fullName>TDS_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>